htdocs/t/common.css
/* ... */
.b-more-cocktails .next.disabled{background-position:-525px -25px;cursor:default;}
.cocktail-list .prev,
.cocktail-list .next{position:absolute;top:54px;height:14px;width:14px;z-index:2;}
.cocktail-list .prev{background-position:-500px 0;left:0px;}
.cocktail-list .next{background-position:-525px 0;right:-2px;}
.cocktail-list .prev.disabled{background-position:-500px -25px;cursor:default;}
.cocktail-list .next.disabled{background-position:-525px -25px;cursor:default;}
.b-more .b-more-rec .point{width:130px; display:block}
.b-more .b-more-rec {width:208px;margin-right:20px;}
.b-more .b-more-rec .viewport{width:130px;left:21px;}
.b-more .b-more-rec li{width:130px;}

.square-list .next,
.square-list .prev { display: block; width: 20px; height: 20px; }
.square-list .prev { background-position: -450px 0; }
.square-list .next { background-position: -475px 0; }
.square-list .prev.disabled,
.square-list .next.disabled { cursor:default; }
.square-list .prev.disabled { background-position: -450px -25px; }
.square-list .next.disabled { background-position: -475px -25px; }


/* popups-related */
.win-shop{display:none;}
.win-shop{position:fixed;z-index:50;top:0;left:0;width:100%;height:100%;}
.opacity,.win-shop .opacity {background:#000;opacity:0.75;position:absolute;left:0;top:0;bottom:0;right:0;z-index:4;}
.win-shop .win{background:url(bg/win/win.png) no-repeat 0 100%;margin:0 auto;top:72px;position:relative;width:620px;padding:0 19px 19px;z-index:5;}
.win-shop .win-bg{background:url(bg/win/win.png) no-repeat 0 0;position:absolute;top:-20px;width:658px;height:20px;left:0;}
.win-shop .gadget-wrapper{position:relative;}
.win-shop .main{background:#c0c0c0;position:relative;}
.win-shop .main .wrapper{background:#fff;}
.win-shop .main .wrapper{position:relative;overflow:hidden; border: 1px #c0c0c0 solid;}
.win-shop .main .wrapper2{position:relative;}
.win-shop .close{background:url(icon/close.png) no-repeat 0 -10px;position:absolute;height:14px;width:14px;top:11px;right:10px;text-indent:-1000em;}
.win-shop h3{background:url(bg/body/green-more-title.png) repeat-x 0 -19px;padding:34px 0 0 290px;font-weight:bold;font-size:180%;}
.win-shop .main .zoom{text-align:center;margin:0 auto 37px;display:table;text-decoration:none;}
.win-shop .main .zoom img{display:block;margin:10px auto 13px;}
.win-shop .main .zoom span{text-decoration:underline;}
.win-shop .main .gallery{float:left;width:290px;margin-top:-20px;}
.win-shop .main .gallery ul{margin-bottom:35px;}
.win-shop .content{font-size:120%;float:left;width:328px;}
.win-shop .content small{font-size:92%;}
.win-shop .content .alert{color:#eb1c57;}
.win-shop .content .composition{list-style:disc inside;margin:23px 0 0 11px;min-height:4.5em;line-height:1.5;}
.win-shop .content .desc{clear:both;padding:8px 28px 21px 0;}
.win-shop .content .more,
.win-shop .content .less{position:relative;background-color:#f7f7f7;width:160px;height:47px;padding:12px 30px 0 56px;}
.win-shop .content .more dl *,
.win-shop .content .less dl *{background:#f7f7f7;}
.win-shop .content .more i,
.win-shop .content .less i { width: 25px; height: 30px; position: absolute; left: 21px; top: 16px; }
.win-shop .content .more i { background-position: -200px -25px; }
.win-shop .content .less i { background-position: -225px -25px; }
.win-shop .content form{padding:20px 0 12px 0;}
.win-shop .content form dl{margin:0 52px 6px 0}
.win-shop .content form strong{font-weight:normal;padding-right:12px;}
.win-shop .content form a{margin-left:4px;}
.win-shop .content form dl dt { position: relative; padding-left: 14px; }
.win-shop .content form dl dt i { position: absolute; width: 14px; height: 11px; left: 0; top: 2px; background-position: -225px 0px; }
.win-shop .content form dl.empty dt i { display: none; }

.win-shop .content .sum{overflow:hidden;text-align:right;height:66px;}
.win-shop .content .sum p{float:left;text-align:left;}
.win-shop .content .sum p small{display:block;padding-top:4px;}
.win-shop .content .sum button{margin:6px 50px 0 0;}
.win-shop .content .sum p i{font-family:Georgia,serif;font-size:24px;line-height:31px;font-style:normal;}
.win-shop .content #order_note {display: none; color: #ec118f; font-family:Georgia,serif; font-size: 14px; margin-top: 25px;}
.win-shop .content #order_note a { color: #ec118f; text-decoration: none; border-bottom: 1px #ec118f dashed;}
.win-shop .content #order_note a:hover { text-decoration: none;}


.win-shop .b-gadget .cost{font-size:117%;line-height:5;display:block;}
.win-shop .b-gadget .count{display:block;margin-bottom:6px;}
.win-shop .b-gadget .count input{margin-left:6px;}
.win-shop .b-gadget .tags{font-size:82%;color:#343b40;padding-bottom:40px;}
.win-shop .b-gadget small{display:block;}
.win-shop .b-gadget button{display:block;margin:13px 0 21px 0;}
.win-shop .b-gadget .gallery{padding-top:0;}

/* than great buttons, umh... */
button.rounded { position: relative; margin: 0; padding: 0; border: 0; width: 145px; height: 24px; overflow: hidden; color: #fff; cursor: pointer; background-color: transparent; }
button.rounded b { position: relative; left: 1px; top: 0px; font-size: 11px; line-height: 12px; letter-spacing: 0.1em; font-weight: normal; }
button.tiny { width: 110px; background-position: 0 -25px; }
button.strong { background-position: 0 -50px; }
<!--# if expr="$HTTP_USER_AGENT = /MSIE [678]/" -->
button.rounded b { font-weight: bold; top: 5px; }
<!--# endif -->
<!--# if expr="$HTTP_USER_AGENT = /MSIE [78]/" -->
button.rounded b { display: inline-block; letter-spacing: 0.1px; filter: Shadow(Color=#333333,Direction=135,Strength=1); padding-bottom: 1px; }
<!--# endif -->
<!--# if expr="$HTTP_USER_AGENT = /MSIE [8]/" -->
button.rounded b { top: -2px; }
<!--# endif -->
<!--# if expr="$HTTP_USER_AGENT = /Firefox\//" -->
button.rounded b {  top: -2px; }
<!--# endif -->
<!--# if expr="$HTTP_USER_AGENT = /Opera\//" -->
button.rounded b { top: 4px; }
<!--# endif -->
<!--# if expr="$HTTP_USER_AGENT = /Safari\//" -->
button.rounded b { top: -1px; }
/* ... */

